--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ flask-login==0.6.2; python_version >= '3.7'
 flask-migrate==4.0.2; python_version >= '3.6'
 flask-sqlalchemy==3.0.2; python_version >= '3.7'
 flask-wtf==1.1.1; python_version >= '3.7'
-email_validator==1.2.0; python_version >= '3.7'
+email-validator==1.2.0; python_version >= '3.7'
 greenlet==3.0.1; python_version >= '3.7'
 gunicorn==20.1.0; python_version >= '3.5'
 importlib-metadata==6.9.0; python_version < '3.10'
